# platoon

./: .gitignore  README.md  pyproject.toml
platoon/: config_defs.py
platoon/agents/codeact/: agent.py  prompt_builder.py
platoon/episode/: config.py
platoon/train/: __init__.py  rl.py
platoon/train/areal/: __init__.py  actor.py  config_defs.py  loss_functions.py  rl.py
platoon/train/areal/workflows/: step_wise.py
platoon/train/sky_rl/: generator.py  trainer.py
platoon/train/tinker/: __init__.py  config_defs.py  proxy.py  restart_wrapper.py  rl.py
platoon/train/tinker/workflows/: __init__.py  group_rollout_workflow.py
platoon/train/workflows/: step_wise.py
platoon/utils/: llm_client.py  stats_logger.py  tinker_data_processing.py  train.py
platoon/visualization/: tui.py
plugins/codegrep/: README.md  pyproject.toml
plugins/codegrep/platoon/codegrep/: rollout.py  train.py  train_tinker.py
plugins/number-search/: README.md  pyproject.toml  visualize_data.py
plugins/number-search/platoon/number_search/: agent.py  (+10 more)
plugins/openhands_rl/: README.md  pyproject.toml
plugins/openhands_rl/platoon/openhands_rl/: env.py  rollout.py  tasks.py  train.py
plugins/openhands_rl/platoon/openhands_rl/prompts/: default.j2
plugins/textcraft/: pyproject.toml  test_get_info.py
src/platoon/generators/: types.py
src/platoon/train/: appworld_reinforce.py  appworld_reinforce.yaml  areal_integration.py  code_issue_localization_reinforce.yaml  code_issue_localization_reinforce_plus_plus.yaml
src/platoon/utils/: llm_client.py  openhands_utils.py
tests/: test_sequence_extension_prompts.py
(+72 files in other folders)
